
ctools 6.x-dev
#856636: Fix warnings on update.
#866524: "Custom" content type could cause crash if trying to reuse it without activating the custom content type module.
#870820 by EclipseGc: ctools_export_crud_import() passed wrong arguments to import callback, if defined.
Improve the task system to make it possible for Panels Everywhere to get more contexts.

ctools 6.x-1.7 (2010-Jul-26)
==============
Deprecated the callback-based 'defaults' in favor of the identical 'process' (plugin system). Consequently, moved the content_type plugin over to use 'process' instead of the 'defaults' callback.
Added a ctools.api.php file and began documenting some of our api/hooks there.
Changed all hook_ctools_plugin_directory() implementations to use the more informative variable naming scheme.
#817612 by elstudio: Fix validation error that was making it impossible to add 'Existing node' content_types.
#787644 by Amitaibu and merlinofchaos: Introduce export-ui and auto-submit. See API.txt for more.
Update the plugin system documentation, and clean up plugin system logic.
#827498: Allow the 'custom' content type to be re-usable and exportable.
#827370 by dereine: Allow the new auto-submit.js to allow a single class that causes every element in the form to auto-submit.
#717036: Add a check to prevent CSS cache files from being cleared on a cron run.
Partial reversion of #742832.
#767046: Current theme selection rule was broken.
Improve the "Edit panel" tab so that Panels Everywhere can use a different name for site template, and Panels can direct it to the most appropriate tab in the editor.
#828352: Recent improvement to allow selection of fields to display in pane caused summary styles to break.
#764006 by drifter: Fix warning when using Panels Everywhere and views content panes together.
#467898 by mikeker: Allow taxonomy term argument to be restricted to a particular set of vocabularies.